--- a/WebSystems2021.csproj
+++ b/WebSystems2021.csproj
@@ -98,6 +98,7 @@
     <Content Include="images\LogoLogin.jpg" />
     <Content Include="Instrucciones.aspx" />
     <Content Include="Instrucciones1.aspx" />
+    <Content Include="Inversores.aspx" />
     <Content Include="js\CargaInformacion.js" />
     <Content Include="js\Clientes.js" />
     <Content Include="js\Cobranza.js" />
@@ -105,6 +106,7 @@
     <Content Include="js\Documentacion.js" />
     <Content Include="js\Instrucciones.js" />
     <Content Include="js\Instrucciones1.js" />
+    <Content Include="js\Inversores.js" />
     <Content Include="js\libs\bootstrap-datepicker-1.9.0-dist\css\bootstrap-datepicker.css" />
     <Content Include="js\libs\bootstrap-datepicker-1.9.0-dist\css\bootstrap-datepicker.min.css" />
     <Content Include="js\libs\bootstrap-datepicker-1.9.0-dist\css\bootstrap-datepicker.standalone.css" />
@@ -2308,6 +2310,13 @@
     </Compile>
     <Compile Include="Instrucciones1.aspx.designer.cs">
       <DependentUpon>Instrucciones1.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Inversores.aspx.cs">
+      <DependentUpon>Inversores.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Inversores.aspx.designer.cs">
+      <DependentUpon>Inversores.aspx</DependentUpon>
     </Compile>
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
