--- a/WebSystems2021.csproj
+++ b/WebSystems2021.csproj
@@ -325,6 +325,16 @@
     <Content Include="js\libs\DataTables\Select-1.3.0\js\select.semanticui.js" />
     <Content Include="js\libs\DataTables\Select-1.3.0\js\select.semanticui.min.js" />
     <Content Include="js\libs\FuncionesGenericas.js" />
+    <Content Include="js\libs\jq-signature\css\default.css" />
+    <Content Include="js\libs\jq-signature\css\normalize.css" />
+    <Content Include="js\libs\jq-signature\fonts\icomoon.svg" />
+    <Content Include="js\libs\jq-signature\index.html" />
+    <Content Include="js\libs\jq-signature\js\jq-signature.js" />
+    <Content Include="js\libs\jq-signature\js\jq-signature.min.js" />
+    <Content Include="js\libs\jq-signature\js\jquery-1.11.0.min.js" />
+    <Content Include="js\libs\jq-signature\readme.html" />
+    <Content Include="js\libs\jq-signature\related\1.jpg" />
+    <Content Include="js\libs\jq-signature\related\2.jpg" />
     <Content Include="js\libs\jQuery-File-Upload-master\css\jquery.fileupload-noscript.css" />
     <Content Include="js\libs\jQuery-File-Upload-master\css\jquery.fileupload-ui-noscript.css" />
     <Content Include="js\libs\jQuery-File-Upload-master\css\jquery.fileupload-ui.css" />
@@ -2414,6 +2424,10 @@
     <Content Include="js\libs\DataTables\Buttons-1.5.6\css\common.scss" />
     <Content Include="js\libs\DataTables\Buttons-1.5.6\css\mixins.scss" />
     <Content Include="FileUps.ashx" />
+    <Content Include="js\libs\jq-signature\fonts\icomoon.eot" />
+    <Content Include="js\libs\jq-signature\fonts\icomoon.ttf" />
+    <Content Include="js\libs\jq-signature\fonts\icomoon.woff" />
+    <Content Include="js\libs\jq-signature\jQuery之家.url" />
     <None Include="packages.config" />
     <Content Include="Theme\dist\css\adminlte.css.map" />
     <Content Include="Theme\dist\css\adminlte.min.css.map" />
